@@ -66,6 +66,7 @@ protected:
     RectangularMatrix<scalar> datas_;
     scalarList currentValues_;
     scalarList oldValues_;
+    scalarList oldOldValues_;
     label iterator_;
 
     tmp<fv::ddtScheme<scalar>> ddtScheme_;
@@ -103,12 +104,16 @@ public:
     const RectangularMatrix<scalar>& datas() const {return datas_;}
     const scalar& lastValue(const label& id) const {return datas_[iterator_][id];}
     const scalar& oldValue(const label& id) const {return oldValues_[id];}
+    const scalar& oldOldValue(const label& id) const {return oldOldValues_[id];}
     const scalarList& oldValues() const {return oldValues_;}
     const scalar& currentValue(const label& id) const {return currentValues_[id];}
     const scalarList& currentValues() const {return currentValues_;}
     scalar currentEventStartTime() const;
     const scalar& currentEventEndTime() const;
-    void storeOldValues() {oldValues_ = currentValues_;}
+    void storeOldValues() {
+        oldOldValues_ = oldValues_;
+        oldValues_ = currentValues_;
+    }
     void update(const scalar& currentTime);
     void addIntermediateTimeSteps(const scalar& smallDT);
 
